manifests/staging/service.yml
apiVersion: v1
kind: Service
metadata:
    name: staging-web
    annotations:
        # service.beta.kubernetes.io/azure-load-balancer-internal: "true"
        # kubernetes.io/ingress.class: nginx
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: eycloudfundamentalslab
