manifests/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-web
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: staging-web
              port: 
                number: 80
          path: /staging(/|$)(.*)
          pathType: Prefix
